--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-transition-group": "^4.2.4",
     "@types/webfontloader": "^1.6.29",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
