--- a/package.json
+++ b/package.json
@@ -57,6 +57,13 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "commitizen": "^4.0.4",
+    "cz-conventional-changelog": "3.1.0",
     "storybook-addon-jsx": "^7.2.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
