--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/webfontloader": "^1.6.29",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "prettier-eslint": "9.0.1",
+    "prettier-eslint-cli": "5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-move": "^6.1.0",
@@ -32,7 +35,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+    "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
+    "isready": "npm run format && npm run lint && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,8 +64,25 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "@typescript-eslint/eslint-plugin": "2.30.0",
+    "@typescript-eslint/parser": "2.30.0",
+    "babel-eslint": "10.1.0",
     "commitizen": "^4.0.4",
     "cz-conventional-changelog": "3.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-airbnb-typescript": "7.2.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "4.7.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
+    "prettier": "2.0.5",
     "storybook-addon-jsx": "^7.2.3"
   },
   "config": {
