--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
+    "classnames": "^2.2.6",
+    "csstype": "^2.6.10",
     "eslint-plugin-prettier": "3.1.3",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jss": "^10.1.1",
     "react-move": "^6.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
