--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "eslint-plugin-prettier": "3.1.3",
+    "jss": "^10.1.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
     "react": "^16.13.1",
