--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,7 @@
     "noErrorTruncation": false,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./",
-    "paths": {
-      "src/*": ["src/*"],
-    },
+    "baseUrl": "./"
   },
   "include": [
     "src"
