--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/pubsub-js": "^1.5.18",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-jss": "^10.0.0",
@@ -22,9 +23,12 @@
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "eslint-plugin-prettier": "3.1.3",
+    "fp-ts": "^2.5.4",
+    "io-ts": "^2.2.1",
     "jss": "^10.1.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
+    "pubsub-js": "^1.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jss": "^10.1.1",
@@ -33,7 +37,9 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
     "storybook-react-router": "^1.0.8",
+    "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
+    "video-react": "^0.14.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
