--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -16,6 +17,7 @@
     "@types/react-transition-group": "^4.2.4",
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
+    "axios": "^0.19.2",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
     "classnames": "^2.2.6",
