--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/chess.js": "^0.10.1",
     "@types/classnames": "^2.2.10",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -17,10 +18,12 @@
     "@types/react-transition-group": "^4.2.4",
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
+    "axios": "^0.19.2",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
+    "date-fns": "^2.12.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
     "io-ts": "^2.2.1",
