--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-config-react-app": "5.2.1",
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-loader": "4.0.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "4.7.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jest": "^23.8.2",
