--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/axios": "^0.14.0",
+    "@types/chess.js": "^0.10.1",
     "@types/classnames": "^2.2.10",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -15,7 +16,6 @@
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
-    "@types/recompose": "^0.30.7",
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
     "axios": "^0.19.2",
@@ -23,7 +23,10 @@
     "chessboardjsx": "^2.4.2",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
+    "date-fns": "^2.12.0",
     "eslint-plugin-prettier": "3.1.3",
+    "fp-ts": "^2.5.4",
+    "io-ts": "^2.2.1",
     "jss": "^10.1.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
@@ -34,9 +37,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
-    "recompose": "^0.30.0",
     "storybook-react-router": "^1.0.8",
+    "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
+    "video-react": "^0.14.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -86,6 +90,7 @@
     "eslint-config-react-app": "5.2.1",
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-loader": "4.0.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "4.7.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jest": "^23.8.2",
