--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
     "io-ts": "^2.2.1",
+    "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
