feat(config): move WSS, Http and RTC ICE servers to config

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,5 +1,13 @@
+# Env
 REACT_APP_DEBUG=true
 REACT_APP_ENV=dev
 
+# API Servers
 REACT_APP_WSS_ENDPOINT="ws://127.0.0.1:7777"
-REACT_APP_SENTRY_DSN="NOT_AVAILABLE"
+REACT_APP_HTTP_ENDPOINT="http://127.0.0.1:5000"
+
+# RTC STUN/TURN Servers
+REACT_APP_ICE_SERVERS=["stun:stun.ideasip.com"]
+
+# Vendors
+REACT_APP_SENTRY_DSN="N/A"
