--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.3",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
     "io-ts": "^2.2.1",
