--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@
 .env.development.local
 .env.test.local
 .env.staging.local
+.env.staging
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
