--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.4",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.5",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
-    "io-ts": "^2.2.1",
+    "io-ts": "2.2.2",
+    "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "now": "^19.0.0",
