feat(storybook): add Record Mocks for stories. Add WithLocalStream helper component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/chance": "^1.1.0",
     "@types/chess.js": "^0.10.1",
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
@@ -24,6 +25,7 @@
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
     "axios": "^0.19.2",
+    "chance": "^1.1.5",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
     "classnames": "^2.2.6",
