--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/chess.js": "^0.10.1",
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
+    "@types/dateformat": "^3.0.1",
     "@types/humanize-duration": "^3.18.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -32,6 +33,7 @@
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
+    "dateformat": "^3.0.3",
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.7",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
