--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
-    "now": "^19.0.0",
+    "now": "^19.0.1",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
     "react": "^16.13.1",
@@ -63,7 +63,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
-    "deploy:staging": "cd ./build; now --name chessroulette-staging; cd -",
+    "deploy:staging": "cp vercel.json ./build; cd ./build; now --name chessroulette-staging; cd -",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
