feat(title): chessRoulette to Chessroulette

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "ChessRoulette",
+  "short_name": "Chessroulette",
   "name": "Play Chess and Videochat with friends or join an open challenge.",
   "icons": [
     {
