--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
-    "deploy:staging": "cp vercel.json ./build; cd ./build; now --name chessroulette-staging; cd -",
+    "deploy:staging": "cp vercel.json ./build; cd ./build; now --name chessroulette; cd -",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
