--- a/.env.local.sample
+++ b/.env.local.sample
@@ -11,3 +11,5 @@ REACT_APP_ICE_SERVERS=["stun:stun.ideasip.com"]
 
 # Vendors
 REACT_APP_SENTRY_DSN="N/A"
+
+REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID="N/A"
