--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
-    "deploy:staging": "cp vercel.json ./build; cd ./build; now --name chessroulette; cd -",
+    "deploy:staging": "vercel build",
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "deploy:production": "vercel --prod build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
