--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
+    "grommet": "^2.13.0",
     "humanize-duration": "^3.22.0",
     "io-ts": "2.2.2",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
@@ -119,8 +120,10 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
+    "polished": "^3.6.3",
     "prettier": "2.0.5",
-    "storybook-addon-jsx": "^7.2.3"
+    "storybook-addon-jsx": "^7.2.3",
+    "styled-components": "^5.1.0"
   },
   "config": {
     "commitizen": {
