--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.5.4",
     "grommet": "^2.13.0",
+    "grommet-icons": "^4.4.0",
     "humanize-duration": "^3.22.0",
     "io-ts": "2.2.2",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
