--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
     "dateformat": "^3.0.3",
+    "deox": "^3.2.1",
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.8",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
