feat(config): add the Signaling Server info to the config file

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -6,6 +6,11 @@ REACT_APP_ENV=dev
 REACT_APP_WSS_ENDPOINT="ws://127.0.0.1:7777"
 REACT_APP_HTTP_ENDPOINT="http://127.0.0.1:5000"
 
+# SIGNALING Servers
+REACT_APP_SIGNALING_HOST="127.0.0.1"
+REACT_APP_SIGNALING_PORT="9000"
+REACT_APP_SIGNALING_SECURE=0
+
 # RTC STUN/TURN Servers
 REACT_APP_ICE_SERVERS=["stun:stun.ideasip.com"]
 
