--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "humanize-duration": "^3.22.0",
     "io-ts": "2.2.2",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
+    "io-ts-types": "^0.5.6",
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "now": "^19.0.1",
