--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-jss": "^10.0.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
+    "@types/redux-logger": "^3.0.8",
     "@types/storybook-react-router": "^1.0.1",
     "@types/webfontloader": "^1.6.29",
     "axios": "^0.19.2",
@@ -56,9 +58,15 @@
     "react-ga": "^2.7.0",
     "react-jss": "^10.1.1",
     "react-move": "^6.1.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
+    "recoil": "^0.0.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
     "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
