--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-logger": "^3.0.8",
     "@types/storybook-react-router": "^1.0.1",
+    "@types/validatorjs": "^3.15.0",
     "@types/webfontloader": "^1.6.29",
     "axios": "^0.19.2",
     "chance": "^1.1.5",
@@ -40,6 +41,7 @@
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.9",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
+    "final-form": "^4.20.0",
     "fp-ts": "^2.5.4",
     "grommet": "^2.13.0",
     "grommet-icons": "^4.4.0",
@@ -55,6 +57,7 @@
     "prettier-eslint-cli": "5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
     "react-jss": "^10.1.1",
     "react-move": "^6.1.0",
@@ -70,6 +73,7 @@
     "storybook-react-router": "^1.0.8",
     "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
+    "validatorjs": "^3.18.1",
     "video-react": "^0.14.1",
     "webfontloader": "^1.6.28"
   },
