--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-persist": "^4.3.1",
     "@types/storybook-react-router": "^1.0.1",
     "@types/validatorjs": "^3.15.0",
     "@types/webfontloader": "^1.6.29",
@@ -38,17 +39,17 @@
     "date-fns": "^2.12.0",
     "dateformat": "^3.0.3",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.12",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.13",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "final-form": "^4.20.0",
-    "fp-ts": "^2.5.4",
+    "fp-ts": "^2.8.2",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "humanize-duration": "^3.22.0",
-    "io-ts": "2.2.2",
-    "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.2",
-    "io-ts-types": "^0.5.6",
+    "io-ts": "^2.2.10",
+    "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.3",
+    "io-ts-types": "^0.5.10",
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "now": "^19.0.1",
@@ -69,10 +70,12 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
     "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
+    "use-reducer-logger": "^1.0.2",
     "validatorjs": "^3.18.1",
     "video-react": "^0.14.1",
     "webfontloader": "^1.6.28"
