--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "storybook-react-router": "^1.0.8",
     "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
+    "url-pattern": "^1.0.3",
     "use-reducer-logger": "^1.0.2",
     "validatorjs": "^3.18.1",
     "video-react": "^0.14.1",
