--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "peerjs": "^1.2.0",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
     "react-jss": "^10.1.1",
     "react-move": "^6.1.0",
+    "react-popout": "^1.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
