--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/capitalize": "^2.0.0",
     "@types/chance": "^1.1.0",
     "@types/chess.js": "^0.10.1",
     "@types/classnames": "^2.2.10",
@@ -31,6 +32,7 @@
     "@types/validatorjs": "^3.15.0",
     "@types/webfontloader": "^1.6.29",
     "axios": "^0.19.2",
+    "capitalize": "^2.0.3",
     "chance": "^1.1.5",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
@@ -142,7 +144,7 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
     "polished": "^3.6.3",
-    "prettier": "2.0.5",
+    "prettier": "^2.0.5",
     "storybook-addon-jsx": "^7.2.3",
     "styled-components": "^5.1.0"
   },
