--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
-    "ts-results": "^2.0.1",
-    "typescript": "^3.8.3",
+    "ts-results": "^3.0.0",
+    "typescript": "4.0.2",
     "url-pattern": "^1.0.3",
     "use-reducer-logger": "^1.0.2",
     "validatorjs": "^3.18.1",
@@ -124,8 +124,8 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
-    "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "2.30.0",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "babel-eslint": "10.1.0",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "3.1.0",
