--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/humanize-duration": "^3.18.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/pubsub-js": "^1.8.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-jss": "^10.0.0",
