--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
     "@types/dateformat": "^3.0.1",
+    "@types/hark": "^1.2.0",
     "@types/humanize-duration": "^3.18.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -49,6 +50,7 @@
     "fp-ts": "^2.8.2",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
+    "hark": "^1.2.3",
     "humanize-duration": "^3.22.0",
     "io-ts": "^2.2.10",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.3",
