--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
     "@types/dateformat": "^3.0.1",
+    "@types/debounce": "^1.2.0",
     "@types/hark": "^1.2.0",
     "@types/humanize-duration": "^3.18.0",
     "@types/jest": "^24.0.0",
@@ -42,6 +43,7 @@
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
     "dateformat": "^3.0.3",
+    "debounce": "^1.2.0",
     "deox": "^3.2.1",
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.0.25",
     "env-cmd": "^10.1.0",
