--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "hark": "^1.2.3",
+    "hex-to-rgba": "^2.0.1",
     "humanize-duration": "^3.22.0",
     "io-ts": "^2.2.10",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.3",
@@ -81,6 +82,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "split-every": "^0.0.1",
     "storybook-react-router": "^1.0.8",
     "ts-results": "^3.0.0",
     "typescript": "4.0.2",
