--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-jss": "^10.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-select": "^3.0.23",
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-persist": "^4.3.1",
@@ -75,6 +76,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-transition-group": "^4.3.0",
     "recoil": "^0.0.8",
     "redux": "^4.0.5",
