--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snapshot",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
     "deploy:staging": "vercel build",
     "build:production": "env-cmd -f .env.production react-scripts build",
@@ -123,6 +124,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "reactSnapshot": {
+    "snapshotDelay": 5000
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.18",
@@ -154,6 +158,8 @@
     "eslint-plugin-react-hooks": "3.0.0",
     "polished": "^3.6.3",
     "prettier": "^2.0.5",
+    "react-snap": "^1.23.0",
+    "react-snapshot": "^1.3.0",
     "storybook-addon-jsx": "^7.2.3",
     "styled-components": "^5.1.0"
   },
