--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^12.0.0",
     "@types/pubsub-js": "^1.8.1",
     "@types/react": "^16.9.0",
+    "@types/react-div-100vh": "^0.3.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-jss": "^10.0.0",
     "@types/react-redux": "^7.1.9",
@@ -36,6 +37,7 @@
     "@types/validatorjs": "^3.15.0",
     "@types/webfontloader": "^1.6.29",
     "@use-it/event-listener": "^0.1.5",
+    "@wmik/use-media-recorder": "^1.0.0-alpha.4",
     "axios": "^0.19.2",
     "capitalize": "^2.0.3",
     "chance": "^1.1.5",
@@ -68,6 +70,7 @@
     "prettier-eslint-cli": "5.0.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-div-100vh": "^0.5.6",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
