--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chessroulette",
-  "name": "Play Chess and Videochat with friends or join an open challenge.",
+  "name": "Play Chess and Video Chat with friends or Join an Open Challenge.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#F6F8FB",
+  "background_color": "#F6F8FB"
 }
