--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/dateformat": "^3.0.1",
     "@types/debounce": "^1.2.0",
     "@types/hark": "^1.2.0",
+    "@types/howler": "^2.2.1",
     "@types/humanize-duration": "^3.18.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -58,6 +59,7 @@
     "grommet-icons": "^4.4.0",
     "hark": "^1.2.3",
     "hex-to-rgba": "^2.0.1",
+    "howler": "^2.2.1",
     "humanize-duration": "^3.22.0",
     "io-ts": "^2.2.10",
     "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.3",
@@ -65,6 +67,7 @@
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "now": "^19.0.1",
+    "object-equals": "^0.3.0",
     "peerjs": "^1.2.0",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
