--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "ts-results": "^3.0.0",
     "typescript": "4.0.2",
     "url-pattern": "^1.0.3",
+    "use-previous": "^1.1.0",
     "use-reducer-logger": "^1.0.2",
     "validatorjs": "^3.18.1",
     "video-react": "^0.14.1",
