--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.9.0",
     "@types/react-div-100vh": "^0.3.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-jss": "^10.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
@@ -78,6 +79,7 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
+    "react-helmet": "^6.1.0",
     "react-jss": "^10.1.1",
     "react-move": "^6.1.0",
     "react-popout": "^1.0.2",
