--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.1.3",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.1.4",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "final-form": "^4.20.0",
@@ -67,6 +67,7 @@
     "io-ts-types": "^0.5.10",
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
+    "loaders.css": "^0.1.2",
     "now": "^19.0.1",
     "object-equals": "^0.3.0",
     "peerjs": "^1.2.0",
@@ -79,6 +80,7 @@
     "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
     "react-jss": "^10.1.1",
+    "react-loaders": "^3.0.1",
     "react-move": "^6.1.0",
     "react-popout": "^1.0.2",
     "react-redux": "^7.2.0",
