--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chance": "^1.1.5",
     "chess.js": "^0.10.3",
     "chessboardjsx": "^2.4.2",
+    "chessground": "^7.9.3",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
@@ -76,6 +77,7 @@
     "prettier-eslint-cli": "5.0.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-chessground": "^1.5.0",
     "react-div-100vh": "^0.5.6",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.0",
