--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "@types/webfontloader": "^1.6.29",
     "@use-it/event-listener": "^0.1.5",
     "@use-it/instance": "^0.3.0",
-    "@wmik/use-media-recorder": "^1.0.0-alpha.4",
     "axios": "^0.19.2",
     "capitalize": "^2.0.3",
     "chance": "^1.1.5",
     "chess.js": "^0.10.3",
-    "chessboardjsx": "^2.4.2",
     "chessground": "^7.9.3",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
@@ -55,7 +53,6 @@
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.1.4",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
-    "final-form": "^4.20.0",
     "fp-ts": "^2.8.2",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
@@ -70,21 +67,17 @@
     "js-logger": "^1.6.0",
     "jss": "^10.1.1",
     "loaders.css": "^0.1.2",
-    "now": "^19.0.1",
     "object-equals": "^0.3.0",
     "peerjs": "^1.2.0",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
-    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-chessground": "^1.5.0",
     "react-div-100vh": "^0.5.6",
     "react-dom": "^16.13.1",
-    "react-final-form": "^6.5.0",
     "react-ga": "^2.7.0",
     "react-jss": "^10.1.1",
     "react-loaders": "^3.0.1",
-    "react-move": "^6.1.0",
     "react-popout": "^1.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -92,25 +85,20 @@
     "react-select": "^3.1.0",
     "react-transition-group": "^4.3.0",
     "react-use-web-share": "^1.0.2",
-    "recoil": "^0.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "split-every": "^0.0.1",
     "storybook-react-router": "^1.0.8",
     "ts-results": "^3.0.0",
     "typescript": "4.0.2",
-    "url-pattern": "^1.0.3",
     "use-previous": "^1.1.0",
-    "use-reducer-logger": "^1.0.2",
-    "validatorjs": "^3.18.1",
-    "video-react": "^0.14.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:staging": "env-cmd -f .env.staging yarn start",
     "build": "react-scripts build",
     "postbuild": "react-snapshot",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
