fix(prerendering): allow the PeerProvider to render the children even if not authenticated
This will solve the issue of prereendering the home page, which for SEO reasons it doesn't need to
be authenticated or have a peer

--- a/package.json
+++ b/package.json
@@ -101,10 +101,7 @@
     "start:staging": "env-cmd -f .env.staging yarn start",
     "build": "react-scripts build",
     "postbuild": "react-snapshot",
-    "build:staging": "env-cmd -f .env.staging react-scripts build",
-    "deploy:staging": "vercel build",
-    "build:production": "env-cmd -f .env.production react-scripts build",
-    "deploy:production": "vercel --prod build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build; react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
