--- a/.env.local.sample
+++ b/.env.local.sample
@@ -14,7 +14,17 @@ REACT_APP_SIGNALING_SECURE=0
 # RTC STUN/TURN Servers
 REACT_APP_ICE_SERVERS=["stun:stun.ideasip.com"]
 
+# Firebase
+REACT_APP_FIREBASE_API_KEY="TBD"
+REACT_APP_FIREBASE_AUTH_DOMAIN="TBD"
+REACT_APP_FIREBASE_PROJECT_ID="TBD"
+REACT_APP_FIREBASE_STORAGE_BUCKET="TBD"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID="TBD"
+REACT_APP_FIREBASE_APP_ID="TBD"
+REACT_APP_FIREBASE_MEASUREMENT_ID="TBD"
+
 # Vendors
 REACT_APP_SENTRY_DSN="N/A"
 
+# Analytics
 REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID="N/A"
