--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-transition-group": "^4.3.0",
+    "react-use-fb-login": "^1.0.7",
     "react-use-web-share": "^1.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
