--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-transition-group": "^4.3.0",
     "react-use-fb-login": "^1.0.7",
     "react-use-web-share": "^1.0.2",
+    "react-verification-code-input": "^1.2.9",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
