--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#d180995",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#022f0b2",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
@@ -145,7 +145,9 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "babel-eslint": "10.1.0",
+    "camelcase": "^6.2.0",
     "commitizen": "^4.2.1",
+    "countries-list": "^2.6.1",
     "cz-conventional-changelog": "3.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.1.0",
