--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.1.7",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#bba3bdb",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
