--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sentry/browser": "^5.15.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/capitalize": "^2.0.0",
     "@types/chance": "^1.1.0",
