--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/capitalize": "^2.0.0",
     "@types/chance": "^1.1.0",
     "@types/chess.js": "^0.10.1",
+    "@types/chunk": "^0.0.0",
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
     "@types/dateformat": "^3.0.1",
@@ -40,6 +41,7 @@
     "@types/storybook-react-router": "^1.0.1",
     "@types/validatorjs": "^3.15.0",
     "@types/webfontloader": "^1.6.29",
+    "@types/window-or-global": "^1.0.4",
     "@use-it/event-listener": "^0.1.5",
     "@use-it/instance": "^0.3.0",
     "axios": "^0.19.2",
@@ -47,6 +49,7 @@
     "chance": "^1.1.5",
     "chess.js": "^0.10.3",
     "chessground": "^7.9.3",
+    "chunk": "^0.0.3",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
     "date-fns": "^2.12.0",
@@ -103,7 +106,8 @@
     "typescript": "4.0.2",
     "use-debounced-effect": "^1.2.0",
     "use-previous": "^1.1.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "window-or-global": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
