--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#4758d8c",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#a21f633",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
@@ -102,6 +102,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
+    "ts-async-results": "^0.1.6",
     "ts-results": "^3.0.0",
     "typescript": "4.0.2",
     "use-debounced-effect": "^1.2.0",
