--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#a21f633",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#a955215",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
@@ -95,6 +95,7 @@
     "react-twitch-embed-video": "^3.0.0",
     "react-use-fb-login": "^1.0.7",
     "react-use-web-share": "^1.0.2",
+    "react-use-wizard": "^1.1.3",
     "react-verification-code-input": "^1.2.9",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
