--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.2.0-1",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#d71d0f1",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
@@ -106,8 +106,9 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
-    "ts-async-results": "^0.1.6",
+    "ts-async-results": "0.2.0-0",
     "ts-results": "^3.0.0",
+    "tslib": "^2.3.1",
     "typescript": "4.0.2",
     "use-debounced-effect": "^1.2.0",
     "use-previous": "^1.1.0",
