--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "isolatedModules": true,
     "noErrorTruncation": false,
     "noEmit": true,
+    "importHelpers": true,
     "jsx": "react",
     "baseUrl": "./"
   },
