--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#d71d0f1",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.2.0-2",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
