--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "debounce": "^1.2.0",
     "deep-copy": "^1.4.2",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.2.0-2",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#756953a",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
