--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "ts-results": "^3.0.0",
     "tslib": "^2.3.1",
     "typescript": "4.0.2",
+    "use-debounce": "^7.0.0",
     "use-debounced-effect": "^1.2.0",
     "use-previous": "^1.1.0",
     "webfontloader": "^1.6.28",
