fix(app): add deep-object-diff and why-id-you-render

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dateformat": "^3.0.3",
     "debounce": "^1.2.0",
     "deep-copy": "^1.4.2",
+    "deep-object-diff": "^1.1.0",
     "deox": "^3.2.1",
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#756953a",
     "env-cmd": "^10.1.0",
@@ -160,6 +161,7 @@
     "@storybook/react": "^5.3.18",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "babel-eslint": "10.1.0",
     "camelcase": "^6.2.0",
     "commitizen": "^4.2.1",
