--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/window-or-global": "^1.0.4",
     "@use-it/event-listener": "^0.1.5",
     "@use-it/instance": "^0.3.0",
+    "@widgetbot/react-embed": "^1.4.0",
     "axios": "^0.19.2",
     "can-ndjson-stream": "^1.0.2",
     "capitalize": "^2.0.3",
