--- a/.env.local.sample
+++ b/.env.local.sample
@@ -15,7 +15,12 @@ REACT_APP_SIGNALING_SECURE=0
 REACT_APP_ICE_SERVERS=["stun:stun.ideasip.com"]
 
 # Vendors
+
+REACT_APP_FACEBOOK_APP_ID=""
+
 REACT_APP_SENTRY_DSN="N/A"
 
-# Analytics
 REACT_APP_GOOGLE_ANALYTICS_TRACKING_ID="N/A"
+
+REACT_APP_DISCORD_SERVER_ID="N/A"
+REACT_APP_DISCORD_CHANNEL_ID="N/A"
