--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "dstnd-io": "https://github.com/dstnd/dstnd-io.git#add-watch-resource",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
+    "format-duration-time": "^1.5.4",
     "fp-ts": "^2.8.2",
     "grommet-icons": "^4.4.0",
     "hark": "^1.2.3",
