feat(wip - activity route): able to craete an empty activity per page for analysis

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -3,8 +3,10 @@ REACT_APP_DEBUG=true
 REACT_APP_ENV=dev
 
 # API Servers
-REACT_APP_WSS_ENDPOINT="ws://127.0.0.1:7777"
-REACT_APP_HTTP_ENDPOINT="http://127.0.0.1:5000"
+API_ENDPOINT_ORIGIN="localhost:5555"
+
+REACT_APP_WSS_ENDPOINT="wss://$API_ENDPOINT_ORIGIN"
+REACT_APP_HTTP_ENDPOINT="https://$API_ENDPOINT_ORIGIN"
 
 # SIGNALING Servers
 REACT_APP_SIGNALING_HOST="127.0.0.1"
