feat(app): attempt to make ssg work with different config

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "storybook-react-router": "^1.0.8",
+    "sw-precache": "^5.2.1",
     "ts-async-results": "0.2.0-0",
     "ts-results": "^3.0.0",
     "tslib": "^2.3.1",
@@ -129,7 +130,8 @@
     "start": "react-scripts start",
     "start:staging": "env-cmd -f .env.staging yarn start",
     "build": "react-scripts build",
-    "postbuild": "react-snapshot",
+    "postbuild": "react-snapshot && yarn run generate-sw",
+    "generate-sw": "sw-precache --root=build --config scripts/sw-precache-config.js",
     "build:staging": "env-cmd -f .env.staging react-scripts build; react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
