fix(ssg): add a script to copy html files to dirs to be served statically

--- a/package.json
+++ b/package.json
@@ -130,8 +130,8 @@
     "start": "react-scripts start",
     "start:staging": "env-cmd -f .env.staging yarn start",
     "build": "react-scripts build",
-    "postbuild": "react-snapshot && yarn run generate-sw",
-    "generate-sw": "sw-precache --root=build --config scripts/sw-precache-config.js",
+    "postbuild": "react-snapshot && yarn make-static",
+    "make-static": "mkdir build/watch && mv build/watch.html build/watch/index.html && echo 'Done make-static' && ls -l build/watch",
     "build:staging": "env-cmd -f .env.staging react-scripts build; react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
