fix(github ci): add a private repo token for the ci actions to be able to build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PRIVATE_REPOS_ACCESS }}
       - name: Test
         uses: onichandame/node-test-action@master
